--- a/public/application/index.html
+++ b/public/application/index.html
@@ -14,7 +14,7 @@
 
     <main style='height: 100%;'>
         <div style="text-align: center;">
-            
+
             <div id="salvationdevelopment" height="92%"></div>
 
 
@@ -132,9 +132,10 @@
                             <br />
                         </div>
                 </section>
-                <marquee id='servermessages'>
+                <div id='servermessages'>
+                    <meter value=0 min=0 max=2200 value=0 id="progressmeter"></meter>
+                </div>
 
-                </marquee>
                 <div id="staticcontrols">
                     <div id="LANMode" onclick="ygopro('');">
                         LAN Mode
