--- a/public/application/index.html
+++ b/public/application/index.html
@@ -29,15 +29,16 @@
                         <label>Ban List</label>
                         <select id="creategamebanlist">
                             <option value="0" selected>2013.9.1(TCG)</option>
-                            <option value="1">2013.9.1(OCG)</option>
-                            <option value="2">2013.3.1</option>
-                            <option value="3">2012.9.1</option>
-                            <option value="4">2012.3.1</option>
-                            <option value="5">2011.9.1</option>
-                            <option value="6">Traditional</option>
-                            <option value="7">Unlimited</option>
-                            <option value="8">Mega-Banned</option>
-                            <option value="9">TBC</option>
+                            <option value="1">2013.9.1(TCG)</option>
+                            <option value="2">2013.9.1(OCG)</option>
+                            <option value="3">2013.3.1</option>
+                            <option value="4">2012.9.1</option>
+                            <option value="5">2012.3.1</option>
+                            <option value="6">2011.9.1</option>
+                            <option value="7">Traditional</option>
+                            <option value="8">Unlimited</option>
+                            <option value="9">Mega-Banned</option>
+                            <option value="10">TBC</option>
                         </select>
                         <br />
                         <label>Card Pool</label>
