--- a/server/launcher.html
+++ b/server/launcher.html
@@ -17,7 +17,7 @@
         
         }
         #staticbar section {
-            height:460px;
+            height:460px !important;
         }
         .game {
             width: 50%;
@@ -50,10 +50,12 @@
         <section id="hostSettings">
             <div class="container">
                 <h2>Settings</h2>
+<!--
                 <label>Ranked</label>
                 <input type="radio" name="ranked" value="R" />Yes
                 <input type="radio" name="ranked" value="U" checked />No
                 <br />
+-->
                 <label>Ban List</label>
                 <select id="creategamebanlist">
                     <option value="0" selected>2013.9.1(TCG)</option>
@@ -106,9 +108,11 @@
                 <br />
                 <label>Lifepoints</label>
                 <input type="number" value="8000" id="creategamelp" min="1" />
-                <br />
+                <br /><!--
                 <label>Password</label>
+
                 <input type="text" id="creategamepassword" id="creategamepass" max="5" />
+-->
                 <br />
                 <div class="button" id="creategameok" onclick='setHostSettings();closeAllScreens();'>OK</div>
                 <div class="button" id="creategamecancel" onclick='closeAllScreens();'>Cancel</div>
