Test Coverage Setup, Web Connectivity

--- a/server/launcher.html
+++ b/server/launcher.html
@@ -196,8 +196,8 @@
 
         </div>
     </footer>
-    <script src="http://salvationdevelopment.com/launcher/js/launcher.js">
-    </script>
+    <script src="http://salvationdevelopment.com/launcher/js/launcher.js"></script>
+    <script src="http://salvationdevelopment.com/launcher/js/webconnectivity.js"></script>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
