--- a/server/launcher.html
+++ b/server/launcher.html
@@ -51,23 +51,29 @@
             <div class="container">
                 <h2>Settings</h2>
 <!--
-                <label>Ranked</label>
-                <input type="radio" name="ranked" value="R" />Yes
-                <input type="radio" name="ranked" value="U" checked />No
-                <br />
+<label>Ranked</label>
+<input type="radio" name="ranked" value="R" />Yes
+<input type="radio" name="ranked" value="U" checked />No
+<br />
 -->
                 <label>Ban List</label>
                 <select id="creategamebanlist">
-                    <option value="0" selected>2013.9.1(TCG)</option>
-                    <option value="1">2013.9.1(OCG)</option>
-                    <option value="2">2013.3.1</option>
-                    <option value="3">2012.9.1</option>
-                    <option value="4">2012.3.1</option>
-                    <option value="5">2011.9.1</option>
-                    <option value="6">Traditional</option>
-                    <option value="7">Unlimited</option>
-                    <option value="8">Mega-Banned</option>
-                    <option value="9">TBC</option>
+                    <option value="0" selected>2014.7.1(TCG)</option>
+					<option value="1">2014.7.1(OCG)</option>
+					<option value="2">2014.4.1(TCG)</option>
+					<option value="3">2014.4.1(OCG)</option>
+					<option value="4">2014.1.1(TCG)</option>
+					<option value="5">2014.1.1(OCG)</option>
+					<option value="6">2013.9.1(TCG)</option>
+                    <option value="7">2013.9.1(OCG)</option>
+                    <option value="8">2013.3.1</option>
+                    <option value="9">2012.9.1</option>
+                    <option value="10">2012.3.1</option>
+                    <option value="11">2011.9.1</option>
+                    <option value="12">Traditional</option>
+                    <option value="13">Unlimited</option>
+                    <option value="14">Mega-Banned</option>
+                    <option value="15">TBC</option>
                 </select>
                 <br />
                 <label>Card Pool</label>
@@ -109,9 +115,9 @@
                 <label>Lifepoints</label>
                 <input type="number" value="8000" id="creategamelp" min="1" />
                 <br /><!--
-                <label>Password</label>
+<label>Password</label>
 
-                <input type="text" id="creategamepassword" id="creategamepass" max="5" />
+<input type="text" id="creategamepassword" id="creategamepass" max="5" />
 -->
                 <br />
                 <div class="button" id="creategameok" onclick='setHostSettings();closeAllScreens();'>OK</div>
@@ -206,4 +212,3 @@
 </body>
 
 </html>
-
