--- a/client/interface/index.html
+++ b/client/interface/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="js/vendor/jquery-1.11.0.min.js"></script>
     <script src="js/offline.js"></script>
+    <script src="js/offline-server.js"></script>
 </head>
 
 <body>
