--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html>
@@ -11,18 +10,16 @@
     <title>SalvationDevelopment International Launcher</title>
     <style>
         @import url(http://weloveiconfonts.com/api/?family=fontawesome);
-        
         /* fontawesome */
         [class*="fontawesome-"]:before {
-          font-family: 'FontAwesome', sans-serif;
-        
+            font-family: 'FontAwesome', sans-serif;
         }
         #staticbar section {
-            height:460px;
+            height: 460px;
         }
         .game {
             width: 50%;
-            float:left;
+            float: left;
             font-size: 14px;
             padding: 10px;
             border: 1px solid black;
@@ -37,7 +34,7 @@
     <link rel="stylesheet" href="css/viewanimations.css">
     <link rel="stylesheet" href="css/z-index.css">
 
-    <script src="js\vendor\primus.js"></script>
+    <script src="js/vendor/primus.js"></script>
     <script src="js/vendor/jquery-1.11.0.min.js"></script>
 </head>
 
@@ -193,8 +190,8 @@
 
         </div>
     </footer>
-    <script src="http://salvationdevelopment.com/launcher/js/launcher.js">
-    </script>
+<script src="http://salvationdevelopment.com/launcher/js/launcher.js">
+</script>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
