--- a/test/index.html
+++ b/test/index.html
@@ -33,9 +33,9 @@
 
         <h1>
 <!--            <img src="img/logo.png" alt="" id="logo" />-->
-            <span style="color:pink; font-family:'MKStencilsansBlack', sans-serif">Salvation</span>Development</h1>
+            <span style="color:hotpink; font-family:'MKStencilsansBlack', sans-serif">Salvation</span>Development</h1>
         <h2>Massively Multiplayer Online Yu-Gi-Oh! Simulator</h2>
-        <ul class="featurelist">
+        <ul class="featurelist" style="font-size:small">
             <li>Massive</li>
             <li>Automated</li>
             <li>Updated</li>
@@ -45,17 +45,16 @@
         </ul>
         <nav class="lander-main">
             <div class="downloadbutton" style="display:none">Play Now</div>
-            <ul class="" style="text-align:center">
-                <li>Mirror 1</li>
-                <li>Mirror 2</li>
-                <li>Mirror 3</li>
-                <li>Magnet Link</li>
+            <ul class="" style="text-align:center; padding:0;">
+                <li>Login</li>
+                <li>Sign Up</li>
+                <li>Downloadable Client</li>
             </ul>
         </nav>
         <div class="originloading" style="text-align:center; margin-top:">
             <br>
         </div>
-        <div style="font-size:.5em; text-align:center; padding-top:20px;">Version 0 : Production 1 : Revision 0 : Commit 99</div>
+        <div style="font-size:.5em; text-align:center; padding-top:20px;">Version 2 : Production 2 : Revision 0</div>
     </header>
 
 
@@ -63,22 +62,7 @@
         <div class="container">
             <span id="creategamebutton">create game</span>
             <a href="cardreader/">Deck Builder</a>
-            <div class="transparent container" id="chat">
-                <div id="chatbody">
-                    <div id="chatbox">
-                        <ul id="room"></ul>
-                    </div>
-                    <ul id="users">
-                    </ul>
-                    <ul id="chatrooms" class="form-body"></ul>
 
-                    <menu id="chatform">
-                        <input placeholder="Enter text here,..." type="text" />
-                        <button type="button" onclick="messageon()">Send</button>
-                    </menu>
-                </div>
-
-            </div>
         </div>
     </section>
     <section id="creategame" style="display:none">
@@ -149,7 +133,7 @@
 
         </div>
     </section>
-    <section class="game" style="display:none;">
+    <section class="game">
         <div class="gamelobby">
             <h2>Game Lobby</h2>
             <div id="lobbyplayers">
