--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>DevPro Online Version 0.01.0.99</title>
+    <title>Salvation Development Massively Multiplayer Online Yu-Gi-Oh! Simulator Version 0.02.0.00</title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
@@ -17,13 +17,6 @@
     <link href="http://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animation.css">
-    <script>
-        process.on('error', function () {
-            console.log('error')
-        })
-    </script>
-    <!--    <script src="js/vendor/modernizr-2.6.2.min.js"></script>-->
-
 </head>
 
 <body>
@@ -37,8 +30,6 @@
             <li>Automated</li>
             <li>Updated</li>
             <li>Open Source</li>
-
-
         </ul>
         <nav class="lander-main">
             <div class="downloadbutton" style="display:none">Play Now</div>
@@ -51,7 +42,7 @@
         <div class="originloading" style="text-align:center; margin-top:">
             <br>
         </div>
-        <div style="font-size:.5em; text-align:center; padding-top:20px;">Version 2 : Production 2 : Revision 0</div>
+        <div style="font-size:.5em; text-align:center; padding-top:20px;">Version 2 : Production 0 : Revision 0</div>
     </header>
 
     <section class="game" style="display:none;">
@@ -221,7 +212,7 @@
     </div>
 
     <footer class="superfooter">
-        YGOPro, Salvation Development and our sister systems are not affliated with Konami. Powered by Yu-Jo Friendship &amp; Love.
+        YGOPro, Salvation Development and our sister systems are not affliated with Konami. Salvation Development &copy; 2013-2014, all rights reserved by respective parties. Powered by Yu-Jo Friendship &amp; Love.
     </footer>
 
 
