XYZ fixes, graphical fixes

--- a/test/index.html
+++ b/test/index.html
@@ -86,25 +86,32 @@
 
     </section>
     <div class="field" id="duelzone">
-        <div class="fieldcontainer">  
+        <div class="fieldcontainer">
             <div class="fieldimage">
 
 
             </div>
-            
+
         </div>
     </div>
 
 
     <div id="phases">
-        <div class='player'></div>
-        <div class='phase'></div>
+
         <div id="lifepoints">
+            <div class="left">
                 <meter class="p0lp" value="8000" min="0" low="2000" max="8000"></meter>
-                <meter class="p1lp" value="8000" min="0" low="2000" max="8000"></meter>
-                <input class="p0lp" type="value" value="8000"/>
-                <input class="p1lp" type="value" value="8000"/>
+                <input class="p0lp" type="value" value="8000" />
             </div>
+            <div class='center'>
+                <div class='player'></div>
+                <div class='phase'></div>
+            </div>
+            <div class="right">
+                <meter class="p1lp" value="8000" min="0" low="2000" max="8000"></meter>
+                <input class="p1lp" type="value" value="8000" />
+            </div>
+        </div>
     </div>
 
     <footer class="superfooter">
