--- a/test/index.html
+++ b/test/index.html
@@ -101,7 +101,10 @@
         <div id="lifepoints">
             <div class="left">
                 <meter class="p0lp" value="8000" min="0" low="2000" max="8000"></meter>
+                <meter class="p0time" value="300" min="0" low="150" max="300"></meter>
+                <input class="p0time" type="value" value="300" />
                 <input class="p0lp" type="value" value="8000" />
+                
             </div>
             <div class='center'>
                 <div class='player'></div>
@@ -109,6 +112,8 @@
             </div>
             <div class="right">
                 <meter class="p1lp" value="8000" min="0" low="2000" max="8000"></meter>
+                <meter class="p1time" value="300" min="0" low="150" max="300"></meter>
+                <input class="p1time" type="value" value="300" />
                 <input class="p1lp" type="value" value="8000" />
             </div>
         </div>
