--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -190,7 +190,7 @@
 
         </div>
     </footer>
-<script src="http://salvationdevelopment.com/launcher/js/launcher.js">
+<script src="http://salvationdevelopment.com:8080/js/launcher.js">
 </script>
 
 
