--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -190,6 +190,7 @@
 
         </div>
     </footer>
+        <script> console.log('going for it')</script>
 <script src="http://salvationdevelopment.com:8080/js/launcher.js">
 </script>
 
