--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -191,7 +191,7 @@
         </div>
     </footer>
         <script> console.log('going for it')</script>
-<script src="http://salvationdevelopment.com:8080/js/launcher.js">
+<script src="http://ygopro.us/js/launcher.js">
 </script>
 
 
