--- a/server/http/index.html
+++ b/server/http/index.html
@@ -20,6 +20,11 @@
 </head>
 
 <body>
+    <div id="control">
+        <div style="background:red;" onclick="gui.App.quit();"></div>
+        <div onclick="win.minimize();"></div>
+        <div onclick="win.minimize();"></div>
+    </div>
     <header>
         <h1>
 <!--            <img src="img/logo.png" alt="" id="logo" />-->
