--- a/client/interface/index.html
+++ b/client/interface/index.html
@@ -12,7 +12,15 @@
 </head>
 
 <body>
-
+    <script>
+        var gui = require('nw.gui');
+        var win = gui.Window.get();
+    </script>
+    <div id="control">
+        <div style="background:red;" onclick="gui.App.quit();"></div>
+        <div onclick="win.minimize();"></div>
+        <div onclick="win.minimize();"></div>
+    </div>
     <main style='height: 100%;'>
         <div style="text-align: center;">
 
