--- a/server/http/index.html
+++ b/server/http/index.html
@@ -34,8 +34,8 @@
         <nav class="lander-main">
             <div class="downloadbutton" style="display:none">Play Now</div>
             <ul class="" style="text-align:center; padding:0;">
-                <li>Login</li>
-                <li>Sign Up</li>
+                <!--<li>Login</li>
+                <li>Sign Up</li>-->
                 <li>Downloadable Client</li>
             </ul>
         </nav>
