--- a/client/interface/index.html
+++ b/client/interface/index.html
@@ -17,9 +17,8 @@
         var win = gui.Window.get();
     </script>
     <div id="control">
-        <div style="background:red;" onclick="gui.App.quit();"></div>
-        <div onclick="win.minimize();"></div>
-        <div onclick="win.minimize();"></div>
+        <div style="border-color:red;" onclick="gui.App.quit();">X</div>
+        <div onclick="win.minimize();">_</div>
     </div>
     <main style='height: 100%;'>
         <div style="text-align: center;">
