--- a/server/http/index.html
+++ b/server/http/index.html
@@ -39,10 +39,7 @@
                 <li>Downloadable Client</li>
             </ul>
         </nav>
-        <div class="originloading" style="text-align:center; margin-top:">
-            <br>
-        </div>
-        <div style="font-size:.5em; text-align:center; padding-top:20px;">Version 2 : Production 0 : Revision 0</div>
+        <div style="font-size:.5em; text-align:center;">Version 3 : Production 1 : Revision 0</div>
     </header>
     <footer class="superfooter"><div style='max-width:1000px; margin:0 auto'>
         YGOPro, Salvation Server, are not affliated with Konami or Kazuki Takahashi. Salvation Server &copy; 2013-2014, all rights reserved by respective parties. Powered by Yu-Jo Friendship and fans of Yu-Gi-Oh! worldwide.</div>
