--- a/server/http/index.html
+++ b/server/http/index.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width">
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,400,800,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animation.css">
 </head>
@@ -24,7 +25,7 @@
     <header>
         <h1>
 <!--            <img src="img/logo.png" alt="" id="logo" />-->
-            <span style="color:hotpink; font-family:'MKStencilsansBlack', sans-serif">YGOPro</span> Salvation Server</h1>
+            <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
         <h2>Real-Time Online Yu-Gi-Oh! Simulator</h2>
         <ul class="featurelist" style="font-size:small">
             <li>Automated</li>
@@ -48,3 +49,4 @@
 </body>
 
 </html>
+ 
