--- a/server/http/index.html
+++ b/server/http/index.html
@@ -28,9 +28,10 @@
             <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
         <h2>Real-Time Online Yu-Gi-Oh! Simulator</h2>
         <ul class="featurelist" style="font-size:small">
-            <li>Automated</li>
-            <li>Updated</li>
-            <li>Open Source</li>
+            <li>News</li>
+            <li>Forum</li>
+            <li>Chat</li>
+            <li>FAQ</li>
         </ul>
         <nav class="lander-main">
             <div class="downloadbutton" style="display:none">Play Now</div>
