--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -115,6 +115,7 @@
         </section>
         <section id='gamelistsection'>
             <div id="gamelist"></div>
+            <div id="gamefilter"></div>
             <button onclick="closeAllScreens()">Close</button>
         </section>
         <section id="settings">
