--- a/server/http/index.html
+++ b/server/http/index.html
@@ -18,6 +18,7 @@
     <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,400,800,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animation.css">
+    
 </head>
 
 <body>
@@ -56,6 +57,13 @@
   ga('send', 'pageview');
 
 </script>
+            <script>
+            $(function() {
+  if (window.self != window.top) {
+    $(document.body).addClass("in-iframe");
+  }
+});
+        </script>
 </body>
 
 </html>
