--- a/client/interface/index.html
+++ b/client/interface/index.html
@@ -17,7 +17,8 @@
         var win = gui.Window.get();
     </script>
     <div id="control">
-        <div style="border-color:red;" onclick="gui.App.quit();"></div>
+        <div onclick="gui.App.quit();"></div>
+        <div onclick="win.maximize();"></div>
         <div onclick="win.minimize();"></div>
     </div>
     <main style='height: 100%;'>
