--- a/server/http/index.html
+++ b/server/http/index.html
@@ -18,7 +18,7 @@
     <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,400,800,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animation.css">
-    
+
 </head>
 
 <body>
@@ -42,29 +42,36 @@
                 <li>Downloadable Client</li>
             </ul>
         </nav>
-        <div style="font-size:.5em; text-align:center;">Version 3 : Production 1 : Revision 0</div>
+        <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
     </header>
-    <footer class="superfooter"><div style='max-width:1000px; margin:0 auto'>
-        YGOPro, Salvation Server, are not affliated with Konami or Kazuki Takahashi. Salvation Server &copy; 2013-2014, all rights reserved by respective parties. Powered by Yu-Jo Friendship and fans of Yu-Gi-Oh! worldwide.</div>
+    <footer class="superfooter">
+        <div style='max-width:1000px; margin:0 auto'>
+            YGOPro, Salvation Server, are not affliated with Konami or Kazuki Takahashi. Salvation Server &copy; 2013-2014, all rights reserved by respective parties. Powered by Yu-Jo Friendship and fans of Yu-Gi-Oh! worldwide.</div>
     </footer>
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-56840301-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-            <script>
-            $(function() {
-  if (window.self != window.top) {
-    $(document.body).addClass("in-iframe");
-  }
-});
-        </script>
+        ga('create', 'UA-56840301-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script>
+        $(function () {
+            if (window.self != window.top) {
+                $(document.body).addClass("in-iframe");
+            }
+        });
+    </script>
 </body>
 
 </html>
- 
