--- a/server/http/index.html
+++ b/server/http/index.html
@@ -46,7 +46,7 @@
     </header>
     <footer class="superfooter">
         <div style='max-width:1000px; margin:0 auto'>
-            YGOPro, Salvation Server, are not affliated with Konami or Kazuki Takahashi. Salvation Server &copy; 2013-2014, all rights reserved by respective parties. Powered by Yu-Jo Friendship and fans of Yu-Gi-Oh! worldwide.</div>
+            YGOPro &amp Salvation Server are not affliated with Konami or Kazuki Takahashi. Salvation Server &copy; 2013-2014, all rights reserved by respective parties. Powered by Yu-Jo Friendship and fans of Yu-Gi-Oh! worldwide.</div>
     </footer>
     <script>
         (function (i, s, o, g, r, a, m) {
