--- a/server/http/index.html
+++ b/server/http/index.html
@@ -36,7 +36,7 @@
         </ul>
         <nav class="lander-main">
             <div class="downloadbutton" style="display:none">Play Now</div>
-            <ul class="" style="text-align:center; padding:0;">
+            <ul class="webonly" style="text-align:center; padding:0;">
                 <!--<li>Login</li>
                 <li>Sign Up</li>-->
                 <li>Downloadable Client</li>
