--- a/server/http/index.html
+++ b/server/http/index.html
@@ -31,7 +31,7 @@
         <ul class="featurelist" style="font-size:small">
             <li>News</li>
             <li>Forum</li>
-            <li>Chat</li>
+            <li><a href="http://salvationdevelopment.com/chat">Chat</a></li>
             <li>FAQ</li>
         </ul>
         <nav class="lander-main">
