--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -119,9 +119,9 @@
                 <label>Current Deck</label>
                 <h3>Search</h3>
                 <div class="incasing">
-                    <label>Format</label>
-                    <label>Round Type</label>
-                    <label>Banlist</label>
+                    <label>Format<select></select></label>
+                    <label>Round Type<select></select></label>
+                    <label>Banlist<select></select></label>
                     <label>Time Limit
                         <select>
                             <option>3 Mins</option>
@@ -131,9 +131,10 @@
                     <label>Username <input placeholder="Players User Name"></label>
                     <button>Search</button>
                     <button>Random Spectate</button>
+                    <button onclick="closeAllScreens()">Close</button>
                 </div>
             </div>
-            <button onclick="closeAllScreens()">Close</button>
+            
         </section>
         <section id="settings">
             <div class='section-content'>
