--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -116,7 +116,7 @@
         <section id='gamelistsection'>
             <div id="gamelist"></div>
             <div id="gamefilter">
-                <label>Current Deck</label>
+                <label>Current Deck<select></select></label>
                 <h3>Search</h3>
                 <div class="incasing">
                     <label>Format<select></select></label>
