--- a/server/http/chat.html
+++ b/server/http/chat.html
@@ -23,25 +23,12 @@
 
 <body>
 
-    <header>
+    <header style="margin-top:120px;">
         <h1>
 <!--            <img src="img/logo.png" alt="" id="logo" />-->
             <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
         <h2>Real-Time Online Yu-Gi-Oh! Simulator</h2>
-        <ul class="featurelist" style="font-size:small">
-            <li>News</li>
-            <li>Forum</li>
-            <li><a href="chat.html">Chat</a></li>
-            <li>FAQ</li>
-        </ul>
-        <nav class="lander-main">
-            <div class="downloadbutton" style="display:none">Play Now</div>
-            <ul class="webonly" style="text-align:center; padding:0;">
-                <!--<li>Login</li>
-                <li>Sign Up</li>-->
-                <li>Downloadable Client</li>
-            </ul>
-        </nav>
+
         <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
     </header>
     <footer class="superfooter">
