--- a/server/http/chat.html
+++ b/server/http/chat.html
@@ -23,14 +23,20 @@
 
 <body>
 
-    <header style="margin-top:120px;">
+    <header style="padding-top:10px;">
         <h1>
 <!--            <img src="img/logo.png" alt="" id="logo" />-->
             <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
         <h2>Real-Time Online Yu-Gi-Oh! Simulator</h2>
-
+        <ul class="featurelist" style="font-size:small">
+            <li><a href="news.html">News</a></li>
+            <li><a href="forum.html">Forum</a></li>
+            <li><a href="chat.html">Chat</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+        </ul>
         <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
     </header>
+    <iframe src="http://lightirc.com/start/?host=ygopro.us&autojoin=%23test&showNickSelection=true&nick=Player" style="width:800px; height:400px;"></iframe>
     <footer class="superfooter">
         <div style='max-width:1000px; margin:0 auto'>
             YGOPro &amp Salvation Server are not affliated with Konami or Kazuki Takahashi. Salvation Server &copy; 2013-2014, all rights reserved by respective parties. Powered by Yu-Jo Friendship and fans of Yu-Gi-Oh! worldwide.</div>
