--- a/server/http/chat.html
+++ b/server/http/chat.html
@@ -24,10 +24,9 @@
 <body>
 
     <header style="padding-top:10px;">
-        <h1>
+        <h1 style="font-size:1.2em">
 <!--            <img src="img/logo.png" alt="" id="logo" />-->
             <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
-        <h2>Real-Time Online Yu-Gi-Oh! Simulator</h2>
         <ul class="featurelist" style="font-size:small">
             <li><a href="news.html">News</a></li>
             <li><a href="forum.html">Forum</a></li>
@@ -35,7 +34,7 @@
             <li><a href="faq.html">FAQ</a></li>
         </ul>
         <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
-        <iframe src="http://lightirc.com/start/?host=ygopro.us&autojoin=%23test&showNickSelection=true&nick=Player" style="width:800px; height:400px;"></iframe>
+        <iframe  src="http://lightirc.com/start/?host=ygopro.us&autojoin=%23test&showNickSelection=true&nick=Player&styleURL=http://penguinlodge.com/lightIRC/css/black.css" style="width:800px; height:400px; margin:0 auto; display: inherit;"></iframe>
     </header>
     
     <footer class="superfooter">
