link fix, prelaunch

--- a/server/http/chat.html
+++ b/server/http/chat.html
@@ -24,9 +24,9 @@
 <body>
 
     <header style="padding-top:10px;">
-        <h1 style="font-size:1.2em">
+        <a href="index.html"><h1 style="font-size:1.2em">
 <!--            <img src="img/logo.png" alt="" id="logo" />-->
-            <a href="index.html"></a><span style="color:#e4a;">YGOPro</span> Salvation Server</h1></a>
+            <span style="color:#e4a;">YGOPro</span> Salvation Server</h1></a>
         <ul class="featurelist" style="font-size:small">
             <li><a href="news.html">News</a></li>
             <li><a href="forum.html">Forum</a></li>
