--- a/server/http/index.html
+++ b/server/http/index.html
@@ -29,10 +29,10 @@
             <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
         <h2>Real-Time Online Yu-Gi-Oh! Simulator</h2>
         <ul class="featurelist" style="font-size:small">
-            <li>News</li>
-            <li>Forum</li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="forum.html">Forum</a></li>
             <li><a href="chat.html">Chat</a></li>
-            <li>FAQ</li>
+            <li><a href="faq.html">FAQ</a></li>
         </ul>
         <nav class="lander-main">
             <div class="downloadbutton" style="display:none">Play Now</div>
