--- a/server/http/news.html
+++ b/server/http/news.html
@@ -24,9 +24,9 @@
 <body>
 
     <header style="padding-top:10px;">
-        <h1 style="font-size:1.2em">
+        <a href="index.html"><h1 style="font-size:1.2em">
 <!--            <img src="img/logo.png" alt="" id="logo" />-->
-            <a href="index.html"></a><span style="color:#e4a;">YGOPro</span> Salvation Server</h1></a>
+            <span style="color:#e4a;">YGOPro</span> Salvation Server</h1></a>
         <ul class="featurelist" style="font-size:small">
             <li><a href="news.html">News</a></li>
             <li><a href="forum.html">Forum</a></li>
@@ -34,9 +34,11 @@
             <li><a href="faq.html">FAQ</a></li>
         </ul>
         <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
-        <p></p>
+        <div style="width:75vw; margin:10px auto; color:#ddd">
+            <h2>Pre Launch Launch</h2>
+            <p>Hello, and welcome to the American Server for YGOPro, it is nicknamed 'Salvation' in honor of its focus on the player base and improving the state of the game. Pre launch includes an amount of system checks and public relation work while the production code is put in place and everything is stress tested. If you have any question please ask in the chat or read the FAQ. Much Thanks -AccessDenied</p>
+        </div>
     </header>
-    
     <footer class="superfooter">
         <div style='max-width:1000px; margin:0 auto'>
             YGOPro &amp Salvation Server are not affliated with Konami or Kazuki Takahashi. Salvation Server &copy; 2013-2014, all rights reserved by respective parties. Powered by Yu-Jo Friendship and fans of Yu-Gi-Oh! worldwide.</div>
