--- a/server/http/news.html
+++ b/server/http/news.html
@@ -34,9 +34,12 @@
             <li><a href="faq.html">FAQ</a></li>
         </ul>
         <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
-        <div style="width:75vw; margin:10px auto; color:#ddd">
-            <h2>Pre Launch Launch</h2>
-            <p>Hello, and welcome to the American Server for YGOPro, it is nicknamed 'Salvation' in honor of its focus on the player base and improving the state of the game. Pre launch includes an amount of system checks and public relation work while the production code is put in place and everything is stress tested. If you have any question please ask in the chat or read the FAQ. Much Thanks -AccessDenied</p>
+        <div style="width:75vw; margin:10px auto; color:#ddd;  text-size:smaller;">
+            <details>
+                <summary open>Prelaunch</summary>
+                Hello, and welcome to the American Server for YGOPro, it is nicknamed 'Salvation' in honor of its focus on the player base and improving the state of the game. Pre launch includes an amount of system checks and public relation work while the production code is put in place and everything is stress tested. If you have any question please ask in the chat or read the FAQ. Much Thanks <br />-AccessDenied
+            
+            </details>
         </div>
     </header>
     <footer class="superfooter">
