--- a/server/http/chat.html
+++ b/server/http/chat.html
@@ -18,6 +18,8 @@
     <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,400,800,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animation.css">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+    <script type="text/javascript" src="lightIRC/config.js"></script>
 
 </head>
 
@@ -34,7 +36,13 @@
             <li><a href="faq.html">FAQ</a></li>
         </ul>
         <div style="font-size:.5em; text-align:center;" id="versioninfo">Version 3 : Production 1 : Revision 0</div>
-        <iframe  src="http://lightirc.com/start/?host=ygopro.us&autojoin=%23test&showNickSelection=true&nick=Player&styleURL=http://penguinlodge.com/lightIRC/css/black.css" style="width:800px; height:400px; margin:0 auto; display: inherit;"></iframe>
+        <div id="lightIRC" style="height:100%; text-align:center;">
+  <p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" /></a></p>
+ </div>
+ 
+ <script type="text/javascript">
+	swfobject.embedSWF("lightIRC/lightIRC.swf", "lightIRC", "100%", "100%", "10.0.0", "expressInstall.swf", params);
+ </script>
     </header>
     
     <footer class="superfooter">
