--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -213,8 +213,8 @@
             <div id="runHost" onclick="openScreen('#hostSettings');">
                 Host
             </div>
-            <div id="checkmateServer" onclick="connectToCheckmateServer();">
-                Checkmate Server
+            <div id="customize" onclick="" style="color:white">
+                Customize
             </div>
             <div id="runHost" onclick="openScreen('#settings');">
                 Settings
